manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-server
  namespace: jenkins-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-server
  template:
    metadata:
      labels:
        app: jenkins-server
    spec:
      containers:
        - name: jenkins-server
          image: jenkins/jenkins:lts
          volumeMounts:
          - name: jenkins-volume
            mountPath: /var/jenkins_hom
      volumes:
        - name: jenkins-volume
          persistentVolumeClaim:
            claimName: jenkins-claim
