manifests/jenkins-04-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: devops-tools
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector:
    app: jenkins-server
  type: LoadBalancer
  ports:
    - name: jenkinshttp
      port: 8080
      targetPort: 8080
    - name: jenkinsjnlp
      port: 50000
      targetPort: 50000
