manifests/svc_ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-server-svc
  namespace: jenkins-namespace
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  type: ClusterIP
  selector:
    app: jenkins-server
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-server-ingress
  namespace: jenkins-namespace
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-server-svc
            port:
              number: 8080
